@@ -1,3 +1,8 @@
+2005-02-10  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* events.c: Fix double clicking under click-to-move mode so that
+	we only drag valid sequences. This fixes bug #164638.
+
 2005-02-01  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* dialog.c (show_rules_options_dialog): Fix a call to
